Use rollup-jest to tranform component code before testing, so we can import component JS in our unit.test.mjs files

--- a/package.json
+++ b/package.json
@@ -108,5 +108,8 @@
       "/package/**/*.mjs",
       "/src/govuk/vendor/polyfills/**/*.mjs"
     ]
+  },
+  "dependencies": {
+    "rollup-jest": "^3.0.0"
   }
 }
