--- a/src/govuk/components/pagination/pagination.yaml
+++ b/src/govuk/components/pagination/pagination.yaml
@@ -94,6 +94,7 @@ examples:
     - number: 1
       href: '/page/1'
     - number: 2
+      href: '/page/2'
       current: true
     - number: 3
       href: '/page/3'
@@ -108,6 +109,7 @@ examples:
     - number: 1
       href: '/page/1'
     - number: 2
+      href: '/page/2'
       current: true
     - number: 3
       href: '/page/3'
@@ -123,6 +125,7 @@ examples:
     - number: 'one'
       href: '/page/1'
     - number: 'two'
+      href: '/page/2'
       current: true
     - number: 'three'
       href: '/page/3'
@@ -137,6 +140,7 @@ examples:
       href: '/page/1'
       visuallyHiddenText: '1st page'
     - number: 2
+      href: '/page/2'
       current: true
       visuallyHiddenText: '2nd page (you are currently on this page)'
     - number: 3
@@ -157,6 +161,7 @@ examples:
     - number: 9
       href: '/page/9'
     - number: 10
+      href: '/page/10'
       current: true
     - number: 11
       href: '/page/11'
@@ -171,6 +176,7 @@ examples:
       href: '/next'
     items:
     - number: 1
+      href: '/page/1'
       current: true
     - number: 2
       href: '/page/2'
@@ -186,6 +192,7 @@ examples:
     - number: 2
       href: '/page/2'
     - number: 3
+      href: '/page/3'
       current: true
 - name: with prev and next only
   data:
