Fix 'text-content' violations

--- a/src/govuk/components/button/button.yaml
+++ b/src/govuk/components/button/button.yaml
@@ -229,7 +229,8 @@ examples:
     text: Submit
     element: button
     html: Start <em>now</em>
-- name: no data
+- name: no type
   hidden: true
-  data: {}
+  data:
+    text: Button!
 
