Fix 'wcag/h30' violations
The skip link doesn't have default for text, so when neither text nor html are passed you end up with a link with no text which violates this rule:

> Anchor link must have a text describing its purpose [wcag/h30]

--- a/src/govuk/components/skip-link/skip-link.yaml
+++ b/src/govuk/components/skip-link/skip-link.yaml
@@ -34,9 +34,10 @@ examples:
       href: '#content'
 
 # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
-  - name: default values
+  - name: no href
     hidden: true
-    data: {}
+    data:
+      text: Skip to main content
   - name: custom href
     hidden: true
     data:
