--- a/src/govuk/components/radios/radios.yaml
+++ b/src/govuk/components/radios/radios.yaml
@@ -692,6 +692,8 @@ examples:
     name: example-name
     fieldset:
       describedBy: some-id
+      legend:
+        text: Which option?
     items:
       - value: yes
         text: Yes
