--- a/src/govuk/components/checkboxes/checkboxes.yaml
+++ b/src/govuk/components/checkboxes/checkboxes.yaml
@@ -699,6 +699,8 @@ examples:
     name: example-name
     fieldset:
       describedBy: some-id
+      legend:
+        text: Which option?
     items:
       - value: 1
         text: Option 1
