--- a/src/govuk/components/tabs/tabs.yaml
+++ b/src/govuk/components/tabs/tabs.yaml
@@ -167,7 +167,7 @@ examples:
               <h2 class="govuk-heading-l">Tab 1</h2>
               <p class="govuk-body">Testing that when you click the anchor it moves to the anchor point successfully</p>
               <p class="govuk-body"><a class="govuk-link" href="#anchor">Anchor</a></p>
-              <p class="govuk-body"><a id="anchor" tabIndex="0">Anchor Point</a></p>
+              <p class="govuk-body"><a id="anchor" tabindex="0">Anchor Point</a></p>
         - label: Tab 2
           id: tab-2
           panel:
