Allow re-enabling autofocus using data attributes
There isn't really much of a use case for this, but to make the config system work consistently, we want to allow data attributes to always override the config set in the JavaScript.

Co-authored-by: Romaric Pascal <romaric.pascal@digital.cabinet-office.gov.uk>

--- a/src/govuk/components/notification-banner/notification-banner.yaml
+++ b/src/govuk/components/notification-banner/notification-banner.yaml
@@ -105,6 +105,11 @@ examples:
     type: success
     disableAutoFocus: true
     text: Email sent to example@email.com
+- name: auto-focus explicitly enabled, with type as success
+  data:
+    type: success
+    disableAutoFocus: false
+    text: Email sent to example@email.com
 - name:  role=alert overridden to role=region, with type as success
   data:
     type: success
