Set up pre-commit git hook using husky
Install the hooks in the prepare script through a node call rather than just `husky install`
as the package won't be installed on Heroku, which would make the `prepare` script fail.

https://typicode.github.io/husky/#/?id=with-a-custom-script

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "lint:js": "npm run lint:js:cli -- \"**/*.{cjs,js,mjs}\"",
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "lint:scss": "npm run lint:scss:cli -- \"{app,src}/**/*.scss\"",
-    "lint:scss:cli": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0"
+    "lint:scss:cli": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
     "@babel/core": "^7.20.2",
@@ -87,6 +88,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "html-validate": "7.10.0",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-axe": "^7.0.0",
     "jest-dev-server": "^6.1.1",
