--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,13 @@ jobs:
           key: npm-cache-${{ hashFiles('package-lock.json') }}
           path: node_modules
 
+      - name: Cache tasks
+        uses: actions/cache@v3
+        with:
+          key: task-cache
+          path: |
+            .cache/jest
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
