--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "lint:scss": "stylelint \"app/**/*.scss\" \"src/**/*.scss\""
   },
   "devDependencies": {
-    "@percy/cli": "^1.0.0-beta.75",
-    "@percy/logger": "1.0.0-beta.74",
-    "@percy/puppeteer": "^2.0.0",
+    "@percy/cli": "^1.10.2",
+    "@percy/logger": "^1.10.2",
+    "@percy/puppeteer": "^2.0.2",
     "autoprefixer": "^9.8.6",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.3",
@@ -57,11 +57,13 @@
     "gulp-sass": "^5.0.0",
     "gulp-task-listing": "^1.1.0",
     "gulp-uglify": "^3.0.2",
+    "html-validate": "^7.4.1",
     "html5shiv": "^3.7.3",
-    "jest": "^27.4.3",
+    "jest": "^29.0.3",
     "jest-axe": "^5.0.1",
-    "jest-puppeteer": "^6.0.2",
-    "jest-serializer-html": "^7.0.0",
+    "jest-environment-jsdom": "^29.0.3",
+    "jest-puppeteer": "^6.1.1",
+    "jest-serializer-html": "^7.1.0",
     "jquery": "1.12.4",
     "js-yaml": "^3.14.0",
     "map-stream": "0.0.7",
@@ -73,8 +75,9 @@
     "postcss": "^8.4.7",
     "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^4.0.3",
-    "puppeteer": "^9.1.1",
+    "puppeteer": "^17.1.3",
     "recursive-readdir": "^2.2.2",
+    "rollup-jest": "^3.0.0",
     "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.4",
     "shuffle-seed": "^1.1.6",
@@ -97,9 +100,5 @@
     "Safari >= 9",
     "ie 8-11",
     "iOS >= 9"
-  ],
-  "dependencies": {
-    "html-validate": "^7.3.3",
-    "rollup-jest": "^3.0.0"
-  }
+  ]
 }
