--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,16 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      - name: Run tests
-        run: npx percy exec -- npm test
+      - name: Build assets
+        run: npm run build:assets
+
+      - name: Run test projects
+        run: |
+          npx jest --color --selectProjects "Nunjucks macro tests"
+          npx jest --color --selectProjects "JavaScript unit tests"
+          npx jest --color --selectProjects "JavaScript behaviour tests"
+
+      - name: Send screenshots to Percy
+        run: npx percy exec -- jest --color --selectProjects "JavaScript component tests"
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
