--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "scripts": {
     "postinstall": "npm ls --depth=0",
     "start": "gulp dev",
-    "heroku": "gulp copy-assets && gulp sassdoc && node app/start.js",
+    "heroku": "npm run build:assets && node app/start.js",
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
+    "build:assets": "gulp copy-assets && gulp sassdoc",
     "build:package": "gulp build:package --destination 'package' && npm run test:build:package",
     "build:dist": "gulp build:dist --destination 'dist' && npm run test:build:dist",
-    "test": "gulp copy-assets && jest --testPathIgnorePatterns=after-*",
-    "test:build:package": "jest tasks/gulp/__tests__/after-build-package.test.js",
-    "test:build:dist": "jest tasks/gulp/__tests__/after-build-dist.test.js",
+    "pretest": "npm run build:assets",
+    "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50%",
+    "test:build:assets": "npx jest --selectProjects \"Gulp tasks\" --testMatch \"**/*components*\"",
+    "test:build:package": "npx jest --selectProjects \"Gulp tasks\" --testMatch \"**/*build-package*\"",
+    "test:build:dist": "npx jest --selectProjects \"Gulp tasks\" --testMatch \"**/*build-dist*\"",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore \"**/*.{cjs,js,mjs}\"",
     "lint:scss": "stylelint \"app/**/*.scss\" \"src/**/*.scss\""
@@ -39,6 +42,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
+    "expect-puppeteer": "^6.1.1",
     "express": "^4.16.4",
     "express-validator": "^6.6.1",
     "front-matter": "^4.0.2",
@@ -61,8 +65,9 @@
     "html5shiv": "^3.7.3",
     "jest": "^29.0.3",
     "jest-axe": "^5.0.1",
+    "jest-dev-server": "^6.1.1",
     "jest-environment-jsdom": "^29.0.3",
-    "jest-puppeteer": "^6.1.1",
+    "jest-environment-puppeteer": "^6.1.1",
     "jest-serializer-html": "^7.1.0",
     "jquery": "1.12.4",
     "js-yaml": "^3.14.0",
@@ -86,6 +91,7 @@
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^5.0.0",
     "undici": "^5.10.0",
+    "wait-on": "^6.0.1",
     "yargs": "^15.4.1"
   },
   "optionalDependencies": {
