--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           key: task-cache
           path: |
+            .cache/eslint
             .cache/jest
             .cache/stylelint
 
