Test that data attributes take precendence over JS config

--- a/src/govuk/components/button/button.yaml
+++ b/src/govuk/components/button/button.yaml
@@ -237,7 +237,7 @@ examples:
   hidden: true
   data:
     text: Submit
-- name: "don't prevent double click"
+- name: don't prevent double click
   hidden: true
   data:
     text: Submit
