--- a/.github/workflows/sass.yaml
+++ b/.github/workflows/sass.yaml
@@ -2,6 +2,10 @@ name: Sass
 
 on: [push, pull_request]
 
+concurrency:
+   group: sass-${{ github.head_ref || github.run_id }}
+   cancel-in-progress: true
+
 jobs:
   dart-sass:
     name: Dart Sass v1.0.0
