--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,10 @@ name: Tests
 
 on: [push, pull_request]
 
+concurrency:
+   group: tests-${{ github.head_ref || github.run_id }}
+   cancel-in-progress: true
+
 jobs:
   run-tests:
     name: Run tests
