--- a/.github/workflows/sass.yaml
+++ b/.github/workflows/sass.yaml
@@ -9,6 +9,8 @@ on:
       - 'feature/**'
       - 'support/**'
 
+  workflow_dispatch:
+
 concurrency:
    group: sass-${{ github.head_ref || github.run_id }}
    cancel-in-progress: true
