--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,8 @@ on:
       - 'feature/**'
       - 'support/**'
 
+  workflow_dispatch:
+
 concurrency:
    group: tests-${{ github.head_ref || github.run_id }}
    cancel-in-progress: true
