--- a/.github/workflows/sass.yaml
+++ b/.github/workflows/sass.yaml
@@ -1,6 +1,13 @@
 name: Sass
 
-on: [push, pull_request]
+on:
+  pull_request:
+
+  push:
+    branches:
+      - main
+      - 'feature/**'
+      - 'support/**'
 
 concurrency:
    group: sass-${{ github.head_ref || github.run_id }}
