--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,13 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+  pull_request:
+
+  push:
+    branches:
+      - main
+      - 'feature/**'
+      - 'support/**'
 
 concurrency:
    group: tests-${{ github.head_ref || github.run_id }}
