Allow CharacterCount component to accept config via JavaScript

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -262,3 +262,10 @@ examples:
         maxlength: 10
       label:
         text: Full address
+  - name: to configure in JavaScript
+    hidden: true
+    data:
+      id: to-configure-in-javascript
+      name: address
+      label:
+        text: Full address
