Replace `gulp serve` with `npm run serve`
Adds nodemon config file

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "postinstall": "npm ls --depth=0",
     "start": "gulp dev",
+    "serve": "nodemon",
     "heroku": "npm run build:compile && node app/start.js",
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
