--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "lint:scss": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore \"{app,src}/**/*.scss\""
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
     "@percy/cli": "^1.10.2",
     "@percy/logger": "^1.10.2",
     "@percy/puppeteer": "^2.0.2",
     "autoprefixer": "^9.8.6",
+    "babel-jest": "^29.1.2",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
@@ -62,10 +65,10 @@
     "gulp-uglify": "^3.0.2",
     "html-validate": "^7.4.1",
     "html5shiv": "^3.7.3",
-    "jest": "^29.0.3",
+    "jest": "^29.2.0",
     "jest-axe": "^5.0.1",
     "jest-dev-server": "^6.1.1",
-    "jest-environment-jsdom": "^29.0.3",
+    "jest-environment-jsdom": "^29.2.0",
     "jest-environment-puppeteer": "^6.1.1",
     "jest-serializer-html": "^7.1.0",
     "jquery": "1.12.4",
@@ -82,7 +85,6 @@
     "postcss-scss": "^4.0.3",
     "puppeteer": "^17.1.3",
     "recursive-readdir": "^2.2.2",
-    "rollup-jest": "^3.0.0",
     "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.4",
     "shuffle-seed": "^1.1.6",
