--- a/docs/examples/webpack/package.json
+++ b/docs/examples/webpack/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "webpack-boilerplate",
-  "description": "Webpack4 boilerplate consuming govuk-frontend",
+  "private": true,
+  "name": "govuk-frontend-webpack-boilerplate",
+  "description": "Boilerplate example for govuk-frontend using webpack",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress --mode development --config webpack.config.js",
-    "build": "webpack -p --progress --mode production --config webpack.config.js"
+    "dev": "webpack serve --progress --mode development",
+    "build": "webpack --progress --mode production"
   },
   "dependencies": {
     "govuk-frontend": "*"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es3": "^1.0.1",
-    "clean-webpack-plugin": "0.1.19",
-    "cross-env": "5.1.4",
-    "css-loader": "0.28.11",
-    "file-loader": "1.1.11",
-    "html-webpack-plugin": "3.2.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "7.0.1",
-    "style-loader": "0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "1.0.1",
-    "webpack": "4.6.0",
-    "webpack-cli": "2.0.14",
-    "webpack-dev-server": ">=3.1.11",
-    "webpack-merge": "4.1.2"
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html5shiv": "^3.7.3",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
