--- a/sassdoc.config.yaml
+++ b/sassdoc.config.yaml
@@ -14,13 +14,18 @@ groups:
   settings/colours: Settings / Colours
   settings/compatibility: Settings / Compatibility
   settings/global-styles: Settings / Global Styles
-  settings/ie8: Settings / IE8
+  settings/internet-explorer-8: Settings / IE8
+  settings/links: Settings / Links
   settings/measurements: Settings / Measurements
   settings/media-queries: Settings / Media Queries
   settings/spacing: Settings / Spacing
   settings/typography: Settings / Typography
   settings/warnings: Settings / Warnings
   tools: Tools
+  tools/assets: Tools / Assets
+  tools/compatibility-mode: Tools / Compatibility Mode
+  tools/internet-explorer-8: Tools / IE8
+  tools/unit-conversion: Tools / Unit Conversion
   helpers: Helpers
   overrides: Overrides
   objects: Objects
