--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,3 +68,10 @@ jobs:
         run: npx percy exec -- jest --color --selectProjects "JavaScript component tests"
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+
+      - name: Save test coverage
+        uses: actions/upload-artifact@v3
+        with:
+          name: Test coverage
+          path: coverage
+          if-no-files-found: ignore
