--- a/.browserslistrc
+++ b/.browserslistrc
@@ -7,8 +7,11 @@ last 2 Firefox versions
 last 2 Edge versions
 last 2 Samsung versions
 Safari >= 9
-ie 8-11
+ie 9-11
 iOS >= 9
+
+[oldie]
+ie 8
 
 [node]
 node 16
