Enable ESLint JSDoc checks

--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.11",
     "del": "^6.1.1",
-    "eslint": "^8.23.1",
+    "eslint": "^8.25.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-jsdoc": "^39.3.12",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.1.0",
     "expect-puppeteer": "^6.1.1",
     "express": "^4.16.4",
     "express-validator": "^6.6.1",
