Add JSDoc generation via `npm run build:jsdoc`

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pre-release": "./bin/pre-release.sh",
     "build:compile": "gulp compile",
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./src/govuk",
+    "build:jsdoc": "jsdoc --configure jsdoc.config.js ./src/govuk",
     "build:package": "gulp build:package --destination 'package' && npm run test:build:package",
     "build:dist": "gulp build:dist --destination 'dist' && npm run test:build:dist",
     "pretest": "npm run build:compile",
@@ -79,6 +80,8 @@
     "jest-serializer-html": "^7.1.0",
     "jquery": "1.12.4",
     "js-yaml": "^4.1.0",
+    "jsdoc": "^3.6.11",
+    "jsdoc-tsimport-plugin": "^1.0.5",
     "map-stream": "0.0.7",
     "marked": "^4.0.10",
     "merge-stream": "^2.0.0",
