--- a/package.json
+++ b/package.json
@@ -87,11 +87,13 @@
     "merge-stream": "^2.0.0",
     "node-sass": "^7.0.3",
     "nodemon": "^2.0.19",
-    "oldie": "^1.3.0",
     "outdent": "^0.7.1",
     "postcss": "^8.4.7",
     "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^4.0.3",
+    "postcss-unmq": "^1.0.2",
+    "postcss-unopacity": "^1.0.1",
+    "postcss-unrgba": "^1.1.1",
     "puppeteer": "^17.1.3",
     "recursive-readdir": "^2.2.2",
     "sass-color-helpers": "^2.1.1",
