--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@percy/cli": "^1.10.2",
     "@percy/logger": "^1.10.2",
     "@percy/puppeteer": "^2.0.2",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^9.8.8",
     "babel-jest": "^29.1.2",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.3",
@@ -65,9 +65,9 @@
     "gulp-eol": "^0.2.0",
     "gulp-if": "^3.0.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-task-listing": "^1.1.0",
     "gulp-uglify": "^3.0.2",
     "html-validate": "^7.4.1",
@@ -88,11 +88,11 @@
     "node-sass": "^7.0.3",
     "nodemon": "^2.0.19",
     "outdent": "^0.7.1",
-    "postcss": "^8.4.7",
-    "postcss-pseudo-classes": "0.2.0",
-    "postcss-scss": "^4.0.3",
+    "postcss": "^8.4.18",
+    "postcss-pseudo-classes": "^0.2.1",
+    "postcss-scss": "^4.0.5",
     "postcss-unmq": "^1.0.2",
-    "postcss-unopacity": "^1.0.1",
+    "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
     "puppeteer": "^17.1.3",
     "recursive-readdir": "^2.2.2",
