Update cheerio tests where safe characters were encoded
Ensures that `.html()` now contains the original HTML rather than incorrectly-encoded safe text that differed to the source

Fix made in https://github.com/cheeriojs/cheerio/releases/tag/v1.0.0-rc.4

“We will no longer encode non-ASCII characters by default.”

--- a/src/govuk/components/error-summary/error-summary.yaml
+++ b/src/govuk/components/error-summary/error-summary.yaml
@@ -120,7 +120,7 @@ examples:
   hidden: true
   data:
     titleText: There is a problem
-    descriptionText: See errors below (▼)
+    descriptionText: See errors below (>)
     errorList:
       -
         text: Invalid username or password
@@ -200,4 +200,4 @@ examples:
   hidden: true
   data:
     titleText: There is a problem
-    disableAutoFocus: false  
+    disableAutoFocus: false
