--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,16 @@ concurrency:
    group: tests-${{ github.head_ref || github.run_id }}
    cancel-in-progress: true
 
+env:
+  INSTALL_CACHE_DIR: |
+    .cache/puppeteer
+    node_modules
+
+  TASK_CACHE_DIR: |
+    .cache/eslint
+    .cache/jest
+    .cache/stylelint
+
 jobs:
   run-tests:
     name: Run tests
@@ -28,16 +38,13 @@ jobs:
         id: npm-cache
         with:
           key: npm-cache-${{ hashFiles('package-lock.json') }}
-          path: node_modules
+          path: ${{ env.INSTALL_CACHE_DIR }}
 
       - name: Cache tasks
         uses: actions/cache@v3
         with:
           key: task-cache
-          path: |
-            .cache/eslint
-            .cache/jest
-            .cache/stylelint
+          path: ${{ env.TASK_CACHE_DIR }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
