--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-task-listing": "^1.1.1",
     "gulp-uglify": "^3.0.2",
-    "html-validate": "^7.5.0",
+    "html-validate": "7.5.0",
     "html5shiv": "^3.7.3",
     "jest": "^29.2.1",
     "jest-axe": "^6.0.0",
