Update default fallback message when no maximum is set
Avoid infering that users will count characters if no maximum nor fallback hint is provided and just set an empty description.
If users provide their own hint to the Nunjucks macro, it will still get forwarded as data attribute in the HTML and interpolated once JavaScript provides the maximum

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -297,7 +297,7 @@ examples:
       label:
         text: Full address
       fallbackHintText: 'No more than %{count} characters'
-  - name: no maximum no fallback hint
+  - name: when neither maxlength/maxwords nor fallback hint are set
     hidden: true
     data:
       id: no-maximum
