Skip install when dependencies are cached
Don’t need to install again when we’ve cached packages for this exact `package-lock.json` before

--- a/.github/workflows/actions/install-node/action.yml
+++ b/.github/workflows/actions/install-node/action.yml
@@ -22,5 +22,7 @@ runs:
     - name: Install dependencies
       id: install-node
 
+      # Skip install when dependencies are cached
+      if: steps.npm-install-cache.outputs.cache-hit != 'true'
       shell: bash
       run: npm ci
