Skip global `~/.npm` cache when install is skipped
Don’t need to restore npm cache if we’re not going to use it

--- a/.github/workflows/actions/install-node/action.yml
+++ b/.github/workflows/actions/install-node/action.yml
@@ -19,6 +19,10 @@ runs:
       uses: ./.github/workflows/actions/setup-node
       id: setup-node
 
+      with:
+        # Restore global `~/.npm` cache (unless lockfile changes)
+        use-cache: ${{ steps.npm-install-cache.outputs.cache-hit != 'true' }}
+
     - name: Install dependencies
       id: install-node
 
