Adjust build tests for Windows compatibility
Previously our tests didn’t expect Windows-style backslashes

Now using the `slash` package to guarantee consistent copy/replace/rename checks on file paths

But we’re also using `path.normalise()` to ensure assertions are correct for the platform they run on using:

1. Backslashes on Windows
2. Forward slashes on POSIX (Linux, macOS)

Also replaces `recursive-readdir` with existing file helpers

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "map-stream": "^0.0.7",
     "marked": "^4.1.1",
     "merge-stream": "^2.0.0",
+    "minimatch": "^5.1.0",
     "node-sass": "^7.0.3",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
@@ -93,7 +94,6 @@
     "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
     "puppeteer": "^19.1.0",
-    "recursive-readdir": "^2.2.2",
     "rollup": "0.56.5",
     "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.4",
