Split build + run packages into `dependencies`
Only build tooling required to start the review app on Heroku should move to `dependencies`

Packages used by tests or linting tools can stay in `devDependencies`

--- a/package.json
+++ b/package.json
@@ -33,22 +33,13 @@
     "lint:js": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0 \"**/*.{cjs,js,mjs}\"",
     "lint:scss": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0 \"{app,src}/**/*.scss\""
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
-    "@percy/cli": "^1.13.0",
-    "@percy/puppeteer": "^2.0.2",
     "autoprefixer": "^9.8.8",
-    "babel-jest": "^29.3.1",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.11",
     "del": "^6.1.1",
-    "eslint": "^8.27.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.6.2",
-    "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-promise": "^6.1.1",
     "front-matter": "^4.0.2",
     "glob": "^8.0.3",
     "gulp": "^4.0.2",
@@ -60,13 +51,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-task-listing": "^1.1.1",
     "gulp-uglify": "^3.0.2",
-    "html-validate": "7.5.0",
-    "jest": "^29.3.1",
-    "jest-axe": "^7.0.0",
-    "jest-dev-server": "^6.1.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "jest-environment-puppeteer": "^6.1.1",
-    "jest-serializer-html": "^7.1.0",
+    "gulp-cli": "^2.3.0",
     "js-yaml": "^4.1.0",
     "jsdoc": "^4.0.0",
     "jsdoc-tsimport-plugin": "^1.0.5",
@@ -75,24 +60,42 @@
     "minimatch": "^5.1.0",
     "node-sass": "^7.0.3",
     "nunjucks": "^3.2.3",
-    "outdent": "^0.8.0",
     "postcss": "^8.4.19",
     "postcss-pseudo-classes": "^0.2.1",
     "postcss-scss": "^4.0.5",
     "postcss-unmq": "^1.0.2",
     "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
-    "puppeteer": "^19.2.2",
     "rollup": "0.56.5",
-    "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.4",
     "slash": "^3.0.0",
+    "yargs": "^17.6.2"
+  },
+  "devDependencies": {
+    "@percy/cli": "^1.13.0",
+    "@percy/puppeteer": "^2.0.2",
+    "babel-jest": "^29.3.1",
+    "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.6.2",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "html-validate": "7.5.0",
+    "jest": "^29.3.1",
+    "jest-axe": "^7.0.0",
+    "jest-dev-server": "^6.1.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-environment-puppeteer": "^6.1.1",
+    "jest-serializer-html": "^7.1.0",
+    "outdent": "^0.8.0",
+    "puppeteer": "^19.2.2",
+    "sass-color-helpers": "^2.1.1",
     "standard": "^17.0.0",
     "stylelint": "^14.15.0",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^5.0.0",
     "wait-on": "^6.0.1",
-    "ws": "^8.11.0",
-    "yargs": "^17.6.2"
+    "ws": "^8.11.0"
   }
 }
