Set up review app `package.json`

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "license": "MIT",
   "workspaces": [
+    "app",
     "docs/examples/*",
     "package"
   ],
   "scripts": {
     "postinstall": "npm ls --depth=0",
     "start": "gulp dev",
-    "serve": "nodemon",
-    "heroku": "npm run build:compile && node app/start.js",
+    "serve": "npm run serve --workspace app",
+    "heroku": "npm run build:compile && npm start --workspace app",
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
@@ -39,9 +40,6 @@
     "@percy/puppeteer": "^2.0.2",
     "autoprefixer": "^9.8.8",
     "babel-jest": "^29.3.1",
-    "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.12",
-    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.11",
     "del": "^6.1.1",
@@ -51,13 +49,8 @@
     "eslint-plugin-jsdoc": "^39.6.2",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
-    "express": "^4.18.2",
-    "express-validator": "^6.14.2",
     "front-matter": "^4.0.2",
     "glob": "^8.0.3",
-    "govuk_frontend_toolkit": "^9.0.1",
-    "govuk_template_jinja": "^0.26.0",
-    "govuk-elements-sass": "3.1.3",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "3.1.0",
     "gulp-if": "^3.0.0",
@@ -68,23 +61,19 @@
     "gulp-task-listing": "^1.1.1",
     "gulp-uglify": "^3.0.2",
     "html-validate": "7.5.0",
-    "html5shiv": "^3.7.3",
     "jest": "^29.3.1",
     "jest-axe": "^7.0.0",
     "jest-dev-server": "^6.1.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-environment-puppeteer": "^6.1.1",
     "jest-serializer-html": "^7.1.0",
-    "jquery": "1.12.4",
     "js-yaml": "^4.1.0",
     "jsdoc": "^4.0.0",
     "jsdoc-tsimport-plugin": "^1.0.5",
     "map-stream": "^0.0.7",
-    "marked": "^4.2.2",
     "merge-stream": "^2.0.0",
     "minimatch": "^5.1.0",
     "node-sass": "^7.0.3",
-    "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
     "outdent": "^0.8.0",
     "postcss": "^8.4.19",
@@ -97,13 +86,11 @@
     "rollup": "0.56.5",
     "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.4",
-    "shuffle-seed": "^1.1.6",
     "slash": "^3.0.0",
     "standard": "^17.0.0",
     "stylelint": "^14.15.0",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^5.0.0",
-    "undici": "^5.12.0",
     "wait-on": "^6.0.1",
     "ws": "^8.11.0",
     "yargs": "^17.6.2"
